--- a/public/index.html
+++ b/public/index.html
@@ -47,4 +47,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <!-- <script src="jquery.js"></script>
+  <script src="jquery-ui.js"></script>
+  <script src="bootstrap.min.js"></script>
+  <script src="bootstrap.js"></script> -->
 </html>
